--- a/webui/src/index.html
+++ b/webui/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="shortcut icon" href="favicon.ico"/>
-    <meta name="viewport" content="initial-scale=1, width=device-width"/>
-    <meta name="theme-color" content="#000000"/>
+    <link href="favicon.ico" rel="shortcut icon"/>
+    <meta content="initial-scale=1, width=device-width" name="viewport"/>
+    <meta content="#000000" name="theme-color"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="manifest.json"/>
+    <link href="manifest.json" rel="manifest"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -20,11 +20,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Underscore Backup</title>
-    <link rel="stylesheet" href="../node_modules/@fontsource/roboto/index.css"/>
+    <link href="../node_modules/@fontsource/roboto/index.css" rel="stylesheet"/>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
-<script type="module" src="./index.tsx"></script>
+<script src="./index.tsx" type="module"></script>
 </body>
 </html>
